--- a/example/index.html
+++ b/example/index.html
@@ -6,6 +6,7 @@
         border: 2px solid purple;
         width: 300px;
         height: 300px;
+        cursor: crosshair;
         /* disable text selection: */
         -webkit-touch-callout: none;
         -webkit-user-select: none;
@@ -25,11 +26,12 @@
       src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png"
       alt="Fork me on GitHub"
     ></a>
+    <h1>create a shape morph animation</h1>
     <div id="a" class="viewport"></div>
-    <div id="b" class="viewport"></div>
-    <div id="c" class="viewport"></div>
+    <div id="b" class="viewport hide"></div>
+    <div id="c" class="viewport hide"></div>
     <div>
-      <button id="run" class="hide">run</button>
+      <a id="download" class="hide">download animation</a>
     </div>
     <script src="bundle.js"></script>
   </body>
